--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="src/data/software-engineer-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Tal Cohen - A skilled software developer with expertise in both backend and frontend development, specializing in Python. Passionate about building efficient and scalable applications." />
+    <meta name="keywords" content="Tal Cohen, Software Developer, Full Stack, Backend, Frontend, Python, JavaScript, Web Development, API, React, Node.js, Django, FastAPI" />
     <title>Tal Cohen - Software Developer</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
