sitemap.xml added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="data/software-engineer-icon.svg" />
+    <link rel="icon" type="image/png" href="src/data/software-engineer-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tal Cohen - A skilled software developer with expertise in both backend and frontend development, specializing in Python. Passionate about building efficient and scalable applications." />
     <meta name="keywords" content="Tal Cohen, Software Developer, Full Stack, Backend, Frontend, Python, JavaScript, Web Development, API, React, Node.js, Django, FastAPI" />
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="main.tsx"></script>
+    <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
