new keywords for seo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="src/data/software-engineer-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Tal Cohen - A skilled software developer with expertise in both backend and frontend development, specializing in Python. Passionate about building efficient and scalable applications." />
-    <meta name="keywords" content="Tal Cohen, Software Developer, Full Stack, Backend, Frontend, Python, JavaScript, Web Development, API, React, Node.js, Django, FastAPI" />
+    <meta name="keywords" content="טל כהן, טל כהן developer, TalCo developer, Tal Cohen, Software Developer, Full Stack, Backend, Frontend, Python, JavaScript, Web Development, React, Node.js" />
     <title>Tal Cohen - Software Developer</title>
   </head>
   <body>
